taskservice/kubernetes/taskservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskservice
  template:
    metadata:
      labels:
        app: taskservice
    spec:
      containers:
        - name: taskservice
          image: moetrt/taskservice:latest
          ports:
            - containerPort: 8080
