taskservice/kubernetes/taskservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskservice
spec:
  selector:
    app: taskservice
  ports:
    - port: 8080
      targetPort: 8080
