taskservice/kubernetes/taskservice-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: taskservice-gateway
spec:
  selector:
    istio: ingressgateway # utilise le gateway d'Istio
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
