taskservice/kubernetes/taskservice-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: taskservice
spec:
  hosts:
    - "*"
  gateways:
    - taskservice-gateway
  http:
    - match:
        - uri:
            prefix: /tasks
      route:
        - destination:
            host: taskservice
            port:
              number: 8080
